--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "bluebird": "^2.3.2",
     "googleapis": "^1.0.11",
+    "hapi": "^6.7.1",
+    "hoek": "^2.4.1",
+    "i": "^0.3.2",
     "image-resolver": "^0.5.3",
     "joi": "^4.6.2",
     "lodash": "^2.4.1",
+    "mongoose-slug-unique": "^1.2.6",
     "nom": "0.0.3",
     "querystring": "^0.2.0",
     "request": "^2.40.0"
